--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,6 @@
-
+body{
+	position:relative;
+}
 .wrapper{
 	width: 960px;
 	margin: 0px auto;
@@ -14,10 +16,15 @@ header {
 .logo {
 	float:left;
 }
+.logout {
+	float: right;
+	font-size: 18px;
+	margin-right: 20px;
+}
 .nav-bar {
 	float: right;
 	width: 757px;
-	height: 52px;
+	height: 40px;
 	border-bottom: 1px solid #dddddd;
 	position: relative;
 }
@@ -40,7 +47,7 @@ header {
 	text-decoration: none;
 	color: #2d73ab !important;
 }
-article {
+article, footer ul {
 	overflow: hidden;
 }
 .tab-content li{
@@ -59,8 +66,31 @@ article {
 	width: 280px;
 	height: 300px;
 	float: right;
-	margin: 25px 0px 0px 0px;
+	margin: 42px 0px 0px 0px;
 }
-.right-section ul {
+.right-section ul, footer ul {
 	margin:0px;
 }
+.right-section li {
+	width:120px;
+	float: left;
+}
+
+.right-section li img {
+	width:50px;
+}
+footer {
+	border-top:1px solid #dddddd;
+	position: absolute;
+	bottom:0px;
+	width: 960px;
+	padding:10px;
+	text-align: center;
+}
+footer p:first-child {
+	color: #2d73ab;
+}
+.copy-right {
+	margin-top:5px ! important;
+}
+
